added responsive styles and finsihed single products page

--- a/scss/components/woocommerce/_single-product.scss
+++ b/scss/components/woocommerce/_single-product.scss
@@ -1,11 +1,30 @@
 .woocommerce {
 
+  div.product {
+    div.images {
+      @media screen and (max-width: $breakpoint-small) {
+        margin-bottom: 0;
+      }
+    }
+  }
+
   .single-product {
+    @media screen and (max-width: $breakpoint-small) {
+      padding: 0;
+    }
 
     .entry-summary {
       background: $color-neutral-brightest;
-      padding: 1.5em 1.5em;
+      padding: 1.5em;
       box-shadow: 0px 2px 3px rgba($color-main,.125);
+
+      @media screen and (max-width: $breakpoint-medium-large) {
+        padding: 1.5em 1em 0em;
+      }
+
+      @media screen and (max-width: $breakpoint-medium) {
+        padding: 1.5em 1em .25em;
+      }
 
       .product_title {
         font-size: 28px;
@@ -14,6 +33,10 @@
         letter-spacing: .125em;
         line-height: normal;
         padding: 0 .25em;
+
+        @media screen and (max-width: $breakpoint-medium-large) {
+          font-size: 24px;
+        }
       }
 
       .product_meta {
@@ -78,6 +101,10 @@
           font-size: 31px;
           line-height: normal;
           color: $color-highlight;
+
+          @media screen and (max-width: $breakpoint-medium-large) {
+            font-size: 24px;
+          }
         }
       }
 
@@ -89,6 +116,10 @@
           font-size: 16px;
           line-height: 1.6em;
           color: $color-neutral-3;
+
+          @media screen and (max-width: $breakpoint-medium-large) {
+            font-size: 14px;
+          }
         }
       }
     }
@@ -99,6 +130,14 @@
       .quantity {
         width: 12%;
         float: left;
+
+        @media screen and (max-width: $breakpoint-medium-large) {
+          width: 20%;
+        }
+
+        @media screen and (max-width: $breakpoint-small) {
+          width: 15%;
+        }
       }
 
       input[type="number"] {
@@ -120,10 +159,18 @@
           border-color: rgba($color-main,.25);
           outline: none;
         }
+
+        @media screen and (max-width: $breakpoint-medium-large) {
+          font-size: 14px;
+        }
+
+        @media screen and (max-width: $breakpoint-medium-large) {
+          height: 45px;
+        }
       }
 
       .button {
-        width: calc(88% - .55em);
+        width: calc(100% - 12% - .55em);
         background: $color-highlight;
         border: 2px solid $color-highlight;
         border-radius: 0;
@@ -133,6 +180,16 @@
         font-size: 16px;
         transition: $transition;
         margin-left: .25em;
+
+        @media screen and (max-width: $breakpoint-medium-large) {
+          width: calc(100% - 20% - .55em);
+          font-size: 14px;
+        }
+
+        @media screen and (max-width: $breakpoint-medium-large) {
+          width: calc(100% - 15% - .55em);
+          height: 45px;
+        }
 
         &::after {
           content: '\f217';
@@ -160,6 +217,10 @@
         border-bottom: 1px solid rgba($color-main,.15);
         border-right: 1px solid rgba($color-main,.15);
 
+          @media screen and (max-width: $breakpoint-medium-large) {
+            font-size: 14px;
+          }
+
         &:nth-of-type(even) {
           border-right: 0;
           padding: .5em 1em;
@@ -177,12 +238,19 @@
           font-size: $font-size-small;
           letter-spacing: .15em;
           color: $color-font-dark;
+
+          @media screen and (max-width: $breakpoint-medium-large) {
+            font-size: 10px;
+          }
         }
       }
     }
 
     .related {
       &.products {
+        @media screen and (max-width: $breakpoint-small) {
+          padding: 0px 24px;
+        }
 
         h2 {
           font-size: 24px;
@@ -191,6 +259,14 @@
           margin-bottom: 1em;
           letter-spacing: .125em;
           color: $color-font;
+
+          @media screen and (max-width: $breakpoint-medium-large) {
+            font-size: 21px;
+          }
+
+          @media screen and (max-width: $breakpoint-small) {
+            font-size: 18px;
+          }
         }
 
         .products {
