--- a/scss/components/woocommerce/_breadcrumbs.scss
+++ b/scss/components/woocommerce/_breadcrumbs.scss
@@ -5,12 +5,20 @@
     background: $color-neutral-brightest;
     box-shadow: 0px 2px 3px rgba(0,0,0,.125);
 
+    @media screen and (max-width: $breakpoint-small) {
+      margin: 0 0;
+    }
+
     li {
       display: block;
       float: left;
       position: relative;
       padding: .5em 1em calc(.5em - 2px);
       border-bottom: 2px solid transparent;
+
+      @media screen and (max-width: $breakpoint-medium) {
+        font-size: 14px;
+      }
 
       &::after {
         content: '\f105';
@@ -20,6 +28,10 @@
         top: 50%;
         right: -2px;
         transform: translateY(calc(-50% - 1px));
+
+        @media screen and (max-width: $breakpoint-medium-large ) {
+          transform: translateY(calc(-50% - 0px));
+        }
       }
 
       &:hover {
