--- a/scss/components/woocommerce/_tabs.scss
+++ b/scss/components/woocommerce/_tabs.scss
@@ -19,6 +19,23 @@
           margin: 0;
           padding: .25em 1.25em;
 
+          @media screen and (max-width: $breakpoint-medium-large ) {
+            font-size: 16px;
+          }
+
+          @media screen and (max-width: $breakpoint-medium ) {
+            font-size: 14px;
+            padding: .125em .75em;
+          }
+
+          @media screen and (max-width: $breakpoint-small ) {
+            width: 100%;
+            display: block;
+            background: $color-neutral-brightest;
+            border: 1px solid rgba($color-main,.15);
+            border-bottom: 0;
+          }
+
           &:first-of-type {
             margin-right: -5px;
           }
@@ -52,6 +69,10 @@
         border: 1px solid rgba($color-main,.15);
         border-top: 0;
 
+        @media screen and (max-width: $breakpoint-medium-large ) {
+          padding: .75em;
+        }
+
         h2 {
           text-transform: uppercase;
           font-weight: 700;
@@ -59,6 +80,14 @@
           font-size: 18px;
           color: $color-font;
           margin-bottom: .5em;
+
+          @media screen and (max-width: $breakpoint-medium-large ) {
+            font-size: 16px;
+          }
+
+          @media screen and (max-width: $breakpoint-small ) {
+            font-size: 14px;
+          }
         }
 
         p {
@@ -66,6 +95,10 @@
           line-height: 1.6em;
           font-size: 16px;
           color: $color-font;
+
+          @media screen and (max-width: $breakpoint-medium-large ) {
+            font-size: 14px;
+          }
         }
       }
     }
