added styles to about page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,7 @@
 @import 'components/content/title-container';
 @import 'components/content/assortment-container';
 @import 'components/content/featured-products-container';
+@import 'components/content/about-wrapper';
 @import 'components/woocommerce/product-archive';
 @import 'components/woocommerce/breadcrumbs';
 @import 'components/woocommerce/single-product';
