added contact page styles

--- a/scss/components/_general-elements.scss
+++ b/scss/components/_general-elements.scss
@@ -50,6 +50,14 @@ a {
   }
 }
 
+.regular-page {
+  padding: 3em 0;
+
+  b {
+    font-weight: 700;
+  }
+}
+
 .page-wrap {
   position: relative;
   transition: $transition;
