--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@
 @import 'components/content/assortment-container';
 @import 'components/content/featured-products-container';
 @import 'components/content/about-wrapper';
+@import 'components/content/contact-form';
 @import 'components/woocommerce/product-archive';
 @import 'components/woocommerce/breadcrumbs';
 @import 'components/woocommerce/single-product';
