--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.header .content-wrap::before, .search-wrap::before, .off-canvas .search-wrap::before, .about-wrapper .featured-container::before, .cat-list ul::before, .footer .content-wrap::before, .footer .bottom-bar .footer-nav ul::before, .header .content-wrap::after, .search-wrap::after, .off-canvas .search-wrap::after, .about-wrapper .featured-container::after, .cat-list ul::after, .footer .content-wrap::after, .footer .bottom-bar .footer-nav ul::after {
+.header .content-wrap::before, .search-wrap::before, .off-canvas .search-wrap::before, .about-wrapper .featured-container::before, .contact-form::before, .cat-list ul::before, .footer .content-wrap::before, .footer .bottom-bar .footer-nav ul::before, .header .content-wrap::after, .search-wrap::after, .off-canvas .search-wrap::after, .about-wrapper .featured-container::after, .contact-form::after, .cat-list ul::after, .footer .content-wrap::after, .footer .bottom-bar .footer-nav ul::after {
   content: '';
   display: table;
   clear: both; }
@@ -467,6 +467,11 @@ a {
   @media screen and (max-width: 560px) {
     .content-wrap {
       padding: 0 24px; } }
+
+.regular-page {
+  padding: 3em 0; }
+  .regular-page b {
+    font-weight: 700; }
 
 .page-wrap {
   position: relative;
@@ -1334,6 +1339,88 @@ h1 {
   @media screen and (max-width: 768px) {
     h1 {
       font-size: 24px; } }
+
+.contact-form input {
+  transition: all 0.3s ease; }
+
+.contact-form p {
+  display: block;
+  float: left;
+  width: calc(50% - 1em);
+  padding: 0;
+  margin: 0;
+  margin-right: 1em; }
+  @media (max-width: 768px) {
+    .contact-form p {
+      float: none;
+      width: 100%;
+      margin-right: 0; } }
+  .contact-form p:nth-of-type(2n) {
+    margin-right: 0; }
+  .contact-form p:nth-last-of-type(2) {
+    width: auto;
+    float: none; }
+    @media (max-width: 768px) {
+      .contact-form p:nth-last-of-type(2) {
+        width: 100%; } }
+  .contact-form p label {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #999999; }
+  .contact-form p input {
+    width: 100%;
+    height: 45px;
+    font-size: 16px;
+    color: #333333;
+    border: 1px solid #b3b3b3;
+    padding: 0 1em;
+    transition: all 0.3s ease;
+    font-family: "Avenir", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    margin-bottom: 12px; }
+    .contact-form p input:focus {
+      outline: none;
+      border: 1px solid #a82e37; }
+  .contact-form p textarea {
+    background: transparent;
+    border: 1px solid #b3b3b3;
+    padding: 1em;
+    font-size: 16px;
+    width: 50%;
+    font-family: "Avenir", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    background: #fff; }
+    @media (max-width: 768px) {
+      .contact-form p textarea {
+        width: 100%; } }
+    .contact-form p textarea:focus {
+      outline: none;
+      border: 1px solid #a82e37; }
+  .contact-form p .wpcf7-submit {
+    width: calc(100% + 1.1em);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #a82e37;
+    border: 2px solid #a82e37;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fff;
+    margin-top: 21px;
+    transition: all 0.3s ease;
+    font-family: "Avenir", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    cursor: pointer; }
+    .contact-form p .wpcf7-submit:hover {
+      background: transparent;
+      color: #a82e37; }
+
+.contact-form .wpcf7-mail-sent-ok {
+  clear: both;
+  border: 1px solid #a82e37;
+  padding: 1em;
+  margin: 0; }
+
+.contact-form .div.wpcf7-response-output {
+  margin: 0;
+  padding: 1em; }
 
 .archive main {
   padding: 4em 0 0; }
