added cart styles, they don't match the screen as planned but i tried to match it as much as woocommerce would allow me to without having to re-write everything

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,5 +25,6 @@
 @import 'components/woocommerce/breadcrumbs';
 @import 'components/woocommerce/single-product';
 @import 'components/woocommerce/tabs';
+@import 'components/woocommerce/cart';
 @import 'components/column-wrap';
 @import 'components/footer/footer';
