added checkout styles

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,5 +26,6 @@
 @import 'components/woocommerce/single-product';
 @import 'components/woocommerce/tabs';
 @import 'components/woocommerce/cart';
+@import 'components/woocommerce/checkout';
 @import 'components/column-wrap';
 @import 'components/footer/footer';
