--- a/scss/components/woocommerce/_cart.scss
+++ b/scss/components/woocommerce/_cart.scss
@@ -8,6 +8,8 @@
 
   .woocommerce-info,
   .woocommerce-message {
+    display: none;
+    
     border-top: 0;
     background: $color-neutral-brightest;
     box-shadow: 0px 2px 3px rgba($color-main,.125);
@@ -20,6 +22,8 @@
   }
 
   .woocommerce-message {
+    display: none;
+
     &::before {
       content: '\f00d';
     }
