added wordpress theme headers for proper display in backend

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,10 @@
+/*
+  Theme Name: Markthalle 5
+  Theme URI: http://www.markthalle-5.de
+  Author: Accenty
+  Version: 1.0
+*/
+
 @import 'imports/vars';
 @import 'imports/fonts';
 @import 'imports/normalize';
