--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*
+  Theme Name: Markthalle 5
+  Theme URI: http://www.markthalle-5.de
+  Author: Accenty
+  Version: 1.0
+*/
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
