--- a/scss/components/woocommerce/_single-product.scss
+++ b/scss/components/woocommerce/_single-product.scss
@@ -71,8 +71,14 @@
 
         .sku_wrapper {
           margin-left: .5em;
-          
+          text-transform: uppercase;
+          font-size: 12px;
+          letter-spacing: .125em;
+
           .sku {
+            text-transform: uppercase;
+            font-weight: 700;
+
             &::before {
               content: '#';
               color: $color-font-dark;
