--- a/scss/components/woocommerce/_single-product.scss
+++ b/scss/components/woocommerce/_single-product.scss
@@ -94,8 +94,7 @@
         border-bottom: 1px solid rgba($color-main,.15);
         border-top: 1px solid rgba($color-main,.15);
 
-        .price,
-        .price-per-unit {
+        .price {
           display: block;
 
           strong {
@@ -117,9 +116,10 @@
         }
 
         .price-per-unit {
+          display: block;
           opacity: .8;
           margin-top: .5em;
-          font-size: 21px;
+          font-size: 16px;
           color: $color-font-dark;
         }
       }
