--- a/scss/components/woocommerce/_single-product.scss
+++ b/scss/components/woocommerce/_single-product.scss
@@ -119,7 +119,9 @@
           display: block;
           opacity: .8;
           margin-top: .5em;
-          font-size: 16px;
+          font-size: 14px;
+          text-transform: uppercase;
+          letter-spacing: .15em;
           color: $color-font-dark;
         }
       }
