--- a/scss/components/woocommerce/_single-product.scss
+++ b/scss/components/woocommerce/_single-product.scss
@@ -170,7 +170,7 @@
         position: relative;
 
         &::-webkit-inner-spin-button {
-          opacity: 1;
+          opacity: 0;
         }
 
         &:focus {
@@ -184,6 +184,49 @@
 
         @media screen and (max-width: $breakpoint-medium-large) {
           height: 45px;
+        }
+      }
+
+      .ui-spinner-input {
+        margin: 0;
+      }
+
+      .ui-spinner-button {
+        border: 1px solid rgba($color-main,.15);
+        background: rgba($color-main,.05);
+        border-top: 0;
+        width: 20px;
+        height: calc(50% - 1px);
+        font-size: 16px;
+        cursor: pointer;
+
+        &::before {
+          font-family: 'FontAwesome';
+          display: block;
+          line-height: 100%;
+          width: 100%;
+          height: 100%;
+          color: $color-font;
+          text-indent: 0;
+        }
+
+        &:first-of-type {
+          top: 1px;
+
+          &::before {
+            content: '\f106';
+            padding: 3px 0;
+          }
+        }
+
+        &:last-of-type {
+          bottom: 1px;
+          border-bottom: 0;
+
+          &::before {
+            content: '\f107';
+            padding: 7px 0;
+          }
         }
       }
 
