--- a/scss/imports/_vars.scss
+++ b/scss/imports/_vars.scss
@@ -7,6 +7,8 @@ $color-background:    #efeeed;
 $color-main:          #202020;
 $color-highlight:     #a82e37;
 
+$color-cart-positive: #0c990c;
+
 // Neutral colours
 
 $color-neutral-brightest:    #fff;
