--- a/style.css
+++ b/style.css
@@ -1663,6 +1663,47 @@ h1 {
   margin: 0;
   padding: 1em; }
 
+.woocommerce a.button {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: .15em;
+  margin: 2em 0 .8em 0;
+  display: block;
+  background: transparent;
+  color: #a82e37;
+  padding: 0; }
+  .woocommerce a.button:hover {
+    background: transparent;
+    color: #333333; }
+  .woocommerce a.button::before {
+    content: '\f217';
+    font-family: 'FontAwesome';
+    margin-right: .25em; }
+  .woocommerce a.button.added {
+    color: #0c990c; }
+    .woocommerce a.button.added::after {
+      content: '\f00c';
+      font-family: 'FontAwesome'; }
+
+.woocommerce a.added_to_cart {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: .15em;
+  margin: .5em 0 0em 0;
+  display: block;
+  background: transparent;
+  color: #333333;
+  padding: 0; }
+  .woocommerce a.added_to_cart:hover {
+    color: #999999; }
+  .woocommerce a.added_to_cart::after {
+    display: inline-block;
+    content: '\f105';
+    font-family: 'FontAwesome';
+    margin-left: .5em; }
+
 .archive main {
   padding: 4em 0 0; }
 
@@ -2251,14 +2292,18 @@ h1 {
     font-size: 24px;
     color: #202020;
     letter-spacing: .1em; }
-  .woocommerce .single-product .related.products .product__details .add-to-cart-button {
+  .woocommerce .single-product .related.products .product__details .add-to-cart-button,
+  .woocommerce .single-product .related.products .product__details .ajax_add_to_cart,
+  .woocommerce .single-product .related.products .product__details .button {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 12px;
     letter-spacing: .15em;
     margin: 1.5em 0 .8em 0;
     display: block; }
-    .woocommerce .single-product .related.products .product__details .add-to-cart-button::before {
+    .woocommerce .single-product .related.products .product__details .add-to-cart-button::before,
+    .woocommerce .single-product .related.products .product__details .ajax_add_to_cart::before,
+    .woocommerce .single-product .related.products .product__details .button::before {
       content: '\f217';
       font-family: 'FontAwesome';
       margin-right: .25em; }
